WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261486
Opacity and root element background image doesn't render
https://bugs.webkit.org/show_bug.cgi?id=261486
Summary
Opacity and root element background image doesn't render
Matt Woodrow
Reported
2023-09-12 17:01:34 PDT
Looks like we compute the wrong clip rect for pushing the opacity group.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-12 17:01:43 PDT
<
rdar://problem/115396444
>
Matt Woodrow
Comment 2
2023-09-12 17:05:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17716
Matt Woodrow
Comment 3
2023-09-12 18:35:15 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/41948
EWS
Comment 4
2023-09-19 15:56:41 PDT
Committed
268156@main
(80a5258521a8): <
https://commits.webkit.org/268156@main
> Reviewed commits have been landed. Closing PR #17716 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug