Source/WebCore/rendering/RenderLayer.h
@@ -691,6 +691,7 @@ public:
         IncludeCompositedDescendants            = 1 << 6,
         UseFragmentBoxesExcludingCompositing    = 1 << 7,
         UseFragmentBoxesIncludingCompositing    = 1 << 8,
+        IncludeRootBackgroundPaintingArea       = 1 << 9,
     };
     static constexpr OptionSet<CalculateLayerBoundsFlag> defaultCalculateLayerBoundsFlags() { return { IncludeSelfTransform, UseLocalClipRectIfPossible, IncludePaintedFilterOutsets, UseFragmentBoxesExcludingCompositing }; }
 
